# Etoile

./: ChangeLog  doxygen_config_framework  pmkfile
Bootstrap/: EtoileFoundation  UnitKit
BuildScripts/: README  build-etoile.sh  build-gnustep.sh  build-llvm.sh  build.config  build.sh  llvm-configure  llvm-configure-basic.sh  mail.config  sendmail.sh  testbuild.config  testbuild.sh  ubuntu-dep-install.sh
Bundles/: GNUmakefile
Bundles/Camaelon/: CLBoxCompositor.h  CLBoxCompositor.m  CLCache.h  CLCache.m  CLCompositor.h  CLCompositor.m  CLHBoxCompositor.h  CLHBoxCompositor.m  CLImage.h  CLImage.m  CLVBoxCompositor.h  CLVBoxCompositor.m  Camaelon.h  Camaelon.m  CamaelonDrawFunctions.h  CamaelonDrawFunctions.m  ChangeLog  ClassicInfo.plist  GNUmakefile  GSBrowserMatrix.h  GSBrowserMatrix.m  GSBrowserTitleCell.m  GSDrawFunctions.h  GSDrawFunctions.m  GSTableCornerView.m  GSToolbar.h  GSToolbar.m  GSWindowDecoratorView.m  GraphicToolbox.h  GraphicToolbox.m  INSTALL  Image.h  Image.m  ImageProvider.h  ImageProvider.m  NSBezierPath+round.h  NSBezierPath+round.m  NSBox.m  NSBrowser.m  NSBrowserCell.m  (+32 more)
Bundles/EtoileBehavior/: COPYING  ChangeLog  ETScriptLoader.m  GNUmakefile  NSApplication+Etoile.h  NSApplication+Etoile.m  README
Bundles/EtoileWildMenus/: ChangeLog  EtoileMenuTitleView.h  EtoileMenuTitleView.m  EtoileMenuUtilities.h  EtoileSeparatorMenuItem.h  EtoileSeparatorMenuItem.m  GNUmakefile  GNUmakefile.preamble  GSHorizontalMenuItemCell.h  GSHorizontalMenuItemCell.m  GSHorizontalMenuView.m  GSTitleView+Hackery.h  GSTitleView+Hackery.m  MHMenuItemCell.h  MHMenuItemCell.m  MenuBarHeight.h  NSApplication+Hackery.m  NSBezierPath+Hackery.h  NSBezierPath+Hackery.m  NSMenu+Hackery.h  NSMenu+Hackery.m  NSMenuItem+Hackery.h  NSMenuItem+Hackery.m  NSMenuItemCell+Hackery.h  NSMenuItemCell+Hackery.m  NSMenuView+Hackery.m  NSResponder+ContextualMenu.h  NSResponder+ContextualMenu.m  README
Bundles/PowerMenulet/: ChangeLog  GNUmakefile  PowerMenulet.h  PowerMenulet.m  README
Bundles/SQLiteClient/: COPYING  ChangeLog  GNUmakefile  INSTALL  README  SQLClient.m  SQLite.h
Bundles/ServiceMenulet/: ChangeLog  GNUmakefile  README  ServiceMenulet.h  ServiceMenulet.m
Developer/: GNUmakefile
Documentation/: SoC
Frameworks/: GNUmakefile
Kuku/: SystemTaskList.plist  modules.make
LiveCD/: hidden  init.sh  livecd.sh  uchroot.c
Services/: GNUmakefile
Services/Private/SystemToolsBackends/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  boot-conf.in  boot-grub.pl.in  boot-lilo.pl.in  boot-yaboot.pl.in  boot.pl.in  config.h.in  configure  configure.in  debug.pl.in  dhcpd-conf.in  dhcpd.pl.in  disks-conf.in  display-conf.in  file.pl.in  filesys.pl.in  font-conf.in  font.pl.in  general.pl.in  hardware-conf.in  internetsharing-conf.in  intltool-merge.in  intltool-update.in  ishare.pl.in  media.pl.in  memory-conf.in  mouse-conf.in  network-conf.in  network.pl.in  package-conf.in  parse.pl.in  partition.pl.in  platform.pl.in  print-conf.in  (+18 more)
Services/Private/SystemToolsBackends/files/: ChangeLog  Makefile.am  Makefile.in  general_isdn_ppp_options
Services/Private/SystemToolsBackends/m4macros/: Makefile.am  Makefile.in  system-tools-backends.m4
Services/Private/SystemToolsBackends/po/: ChangeLog  POTFILES.in  POTFILES.skip  ar.po  az.po  bg.po  bn.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gu.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  ms.po  nb.po  ne.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  rw.po  sk.po  sq.po  (+11 more)
(+4958 files in other folders)
