AC_PREREQ(2.52)
dnl ==============================================================
dnl Process this file with autoconf to produce a configure script.
dnl ==============================================================
AC_INIT(system-tools-backends,1.4.1)
AC_CONFIG_AUX_DIR(.)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_PROG_LIBTOOL

AC_PROG_INTLTOOL([0.29])

dnl ==============================================================
dnl Set SCRIPTS_DIR, FILES_DIR & LOCALE_DIR
dnl ==============================================================
if test "x${prefix}" = "xNONE"; then
  scriptsdir="${ac_default_prefix}/share/setup-tool-backends/scripts"
  filesdir="${ac_default_prefix}/share/setup-tool-backends/files"
  localedir="${ac_default_prefix}/share/locale"
else
  scriptsdir="${prefix}/share/setup-tool-backends/scripts"
  filesdir="${prefix}/share/setup-tool-backends/files"
  localedir="${prefix}/share/locale"
fi

AC_SUBST(scriptsdir)
AC_SUBST(filesdir)
AC_SUBST(localedir)

dnl ==============================================================
dnl END: Set SCRIPTS_DIR, FILES_DIR & LOCALE_DIR
dnl ==============================================================

GETTEXT_PACKAGE=system-tools-backends
AC_SUBST(GETTEXT_PACKAGE)

ALL_LINGUAS="ar az bg bn bs ca cs da de el en_CA en_GB es eu fi fr gu hi hr hu id it ja ko lt ms nb ne nl no pa pl pt pt_BR ro rw sk sq sr sr@Latn sv ta th tr uk vi xh zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
m4macros/Makefile
po/Makefile.in
system-tools-backends.pc
files/Makefile
boot-conf
dhcpd-conf
disks-conf
display-conf
font-conf
hardware-conf
internetsharing-conf
memory-conf
mouse-conf
network-conf
package-conf
print-conf
services-conf
shares-conf
time-conf
users-conf
boot-grub.pl
boot-lilo.pl
boot-yaboot.pl
boot.pl
debug.pl
dhcpd.pl
file.pl
filesys.pl
font.pl
general.pl
ishare.pl
media.pl
network.pl
parse.pl
partition.pl
platform.pl
print.pl
process.pl
removable-media.pl
replace.pl
report.pl
service-list.pl
service.pl
share.pl
tokenizer.pl
util.pl
xml.pl
x.pl
])


echo "

Configuration (BACKENDS):

	The backends will be installed in : ${scriptsdir}
	The files will be installed in    : ${filesdir}
"
